[gd_scene load_steps=5 format=3 uid="uid://dk0tygl1c8st1"]

[ext_resource type="Shader" uid="uid://bhm61sfqsg2hv" path="res://shaders/outline.gdshader" id="1_7cxsu"]
[ext_resource type="Texture2D" uid="uid://blqjqtqr84x84" path="res://images/characters/p1.png" id="1_tb7tu"]
[ext_resource type="Script" uid="uid://bsm2xgo62neco" path="res://scripts/avatar_select.gd" id="2_07tn8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgu7y"]
resource_local_to_scene = true
shader = ExtResource("1_7cxsu")
shader_parameter/enabled = false
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 3.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[node name="Avatar" type="TextureButton"]
material = SubResource("ShaderMaterial_qgu7y")
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("1_tb7tu")
script = ExtResource("2_07tn8")
selected_color = Color(0.294118, 0.623529, 0.356863, 0.807843)
highlighted_color = Color(0.643137, 0.580392, 0.0666667, 0.827451)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
